lrcall/tests/compile_fail/tarpc_service_arg_pat.stderr
error: patterns aren't allowed in RPC args
 --> $DIR/lrcall_service_arg_pat.rs:3:18
  |
3 |     async fn pat((a, b): (u8, u32));
  |                  ^^^^^^
